system/longhorn-system/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: homelab-tunnel.dubass83.xyz
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/auth-url: 'http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.dubass83.xyz/oauth2/sign_in?rd=https://$host$request_uri'
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.dubass83.xyz
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
  tls:
    - hosts:
        - longhorn.dubass83.xyz
      secretName: longhorn-tls-certificate
